networksecurity/networksecurity-denyall-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/network-policies/
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
